# shaders-discovery

./: README.md  french_flag.frag  hsb.frag  hsb_polar.frag  main.py  mondrian.frag  note.md  pyproject.toml  rectangle.frag  test.frag  turner.frag
fragment_shader/: french_flag.frag  mondrian.frag  shape.frag  test.frag  value_noise.frag  voronoi_noise.frag
src/: Engine.py  Renderer.py  __init__.py  app.py  config.py  engine.py  verlet_object.py
src/init/: logger.py
src/utils/: read_shader_source.py
src/verlet/: __init__.py  verlet_object.py  verlet_solver.py
