[tool.poetry]
name = "shaders-discovery"
version = "0.1.0"
description = ""
authors = ["gatienc <gatien@chenu.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
moderngl = "^5.8.2"
pillow = "^10.1.0"
numpy = "^1.26.1"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
